kind of done with iteration 1 but api_key issue

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=3000
 ENV=development
 
 SESS_SECRET = 'super session secret'
+
+CLOUDINARY_URL=cloudinary://345649793767533:dQXx00IpBz5GxEzFemEVjkOpS6Y@dqrpop6fr
